--- a/f&r/index.html
+++ b/f&r/index.html
@@ -272,6 +272,11 @@ document.getElementById("popup-3").classList.toggle("active");
 </body>
 <script src="https://unpkg.com/@simplewebauthn/browser/dist/bundle/index.umd.min.js"></script>
 <script>
+    var porfilepicback = sessionStorage.get("backprofilepic");
+  if (porfilepicback!==null){
+    document.getElementById("profileimage").src = photourls[i];
+    document.getElementById("profileimage1").src = photourls[i];
+  }
 var ustatus ;
   function notavailable(){
     alert("Not Available")
@@ -474,7 +479,8 @@ alert("PassKey is already created for this Device")
        idvalue = uids[i];
    fetchurl = iurls[i];
    uorp = uorps[i];
-   console.log(document.getElementById("profileimage"))
+   console.log(document.getElementById("profileimage"));
+   sessionStorage.setItem("backprofilepic",photourls[i]);
    document.getElementById("profileimage").src = photourls[i];
    document.getElementById("profileimage1").src = photourls[i];
    console.log(document.getElementById("profileimage").src,photourls[i])
