--- a/f&r/new-placement-form.html
+++ b/f&r/new-placement-form.html
@@ -454,6 +454,11 @@ function togglePopup3(){
 </body>
 <script src="https://unpkg.com/@simplewebauthn/browser/dist/bundle/index.umd.min.js"></script>
 <script>
+  var porfilepicback = sessionStorage.get("backprofilepic");
+  if (porfilepicback!==null){
+    document.getElementById("profileimage").src = photourls[i];
+    document.getElementById("profileimage1").src = photourls[i];
+  }
   var fetchurl ="";
          var uname ;
          const keyvalues = window.location.search;
@@ -555,7 +560,8 @@ function togglePopup3(){
      if (uname == inames[i]){
        idvalue = uids[i];
    fetchurl = iurls[i];
-   console.log(document.getElementById("profileimage"))
+   console.log(document.getElementById("profileimage"));
+   sessionStorage.setItem("backprofilepic",photourls[i]);
    document.getElementById("profileimage").src = photourls[i];
    document.getElementById("profileimage1").src = photourls[i];
    console.log(document.getElementById("profileimage").src,photourls[i])
