--- a/f&r/new-form.html
+++ b/f&r/new-form.html
@@ -593,6 +593,11 @@ value="Required"
 </body>
 <script src="https://unpkg.com/@simplewebauthn/browser/dist/bundle/index.umd.min.js"></script>
 <script>
+  var porfilepicback = sessionStorage.get("backprofilepic");
+  if (porfilepicback!==null){
+    document.getElementById("profileimage").src = photourls[i];
+    document.getElementById("profileimage1").src = photourls[i];
+  }
   var crestatus = "";
   function addquestion(){
 var newitem = 
@@ -1132,7 +1137,8 @@ else if (html[j+3][1]=="File Upload"){
      if (uname == inames[i]){
        idvalue = uids[i];
    fetchurl = iurls[i];
-   console.log(document.getElementById("profileimage"))
+   console.log(document.getElementById("profileimage"));
+   sessionStorage.setItem("backprofilepic",photourls[i]);
    document.getElementById("profileimage").src = photourls[i];
    document.getElementById("profileimage1").src = photourls[i];
    console.log(document.getElementById("profileimage").src,photourls[i])
