--- a/f&r/past-placement-forms.html
+++ b/f&r/past-placement-forms.html
@@ -393,7 +393,7 @@ value="Set Time and Date"
 </body>
 <script src="https://unpkg.com/@simplewebauthn/browser/dist/bundle/index.umd.min.js"></script>
 <script>
-  var porfilepicback = sessionStorage.get("backprofilepic");
+  var porfilepicback = sessionStorage.getItem("backprofilepic");
   if (porfilepicback!==null){
     document.getElementById("profileimage").src = photourls[i];
     document.getElementById("profileimage1").src = photourls[i];
