--- a/f&r/past.html
+++ b/f&r/past.html
@@ -269,7 +269,7 @@ document.getElementById("popup-3").classList.toggle("active");
 </body>
 <script src="https://unpkg.com/@simplewebauthn/browser/dist/bundle/index.umd.min.js"></script>
 <script>
-    var porfilepicback = sessionStorage.get("backprofilepic");
+    var porfilepicback = sessionStorage.getItem("backprofilepic");
   if (porfilepicback!==null){
     document.getElementById("profileimage").src = photourls[i];
     document.getElementById("profileimage1").src = photourls[i];
