--- a/f&r/index.html
+++ b/f&r/index.html
@@ -274,8 +274,8 @@ document.getElementById("popup-3").classList.toggle("active");
 <script>
     var porfilepicback = sessionStorage.getItem("backprofilepic");
   if (porfilepicback!==null){
-    document.getElementById("profileimage").src = photourls[i];
-    document.getElementById("profileimage1").src = photourls[i];
+    document.getElementById("profileimage").src = porfilepicback;
+    document.getElementById("profileimage1").src = porfilepicback;
   }
 var ustatus ;
   function notavailable(){
