--- a/f&r/new-placement-form.html
+++ b/f&r/new-placement-form.html
@@ -456,8 +456,8 @@ function togglePopup3(){
 <script>
   var porfilepicback = sessionStorage.getItem("backprofilepic");
   if (porfilepicback!==null){
-    document.getElementById("profileimage").src = photourls[i];
-    document.getElementById("profileimage1").src = photourls[i];
+    document.getElementById("profileimage").src = porfilepicback;
+    document.getElementById("profileimage1").src = porfilepicback;
   }
   var fetchurl ="";
          var uname ;
