--- a/f&r/past-forms.html
+++ b/f&r/past-forms.html
@@ -395,8 +395,8 @@ value="Set Time and Date"
 <script>
     var porfilepicback = sessionStorage.getItem("backprofilepic");
   if (porfilepicback!==null){
-    document.getElementById("profileimage").src = photourls[i];
-    document.getElementById("profileimage1").src = photourls[i];
+    document.getElementById("profileimage").src = porfilepicback;
+    document.getElementById("profileimage1").src = porfilepicback;
   }
 function settimeoption(button){
   console.log(button.value)
