--- a/f&r/past.html
+++ b/f&r/past.html
@@ -271,8 +271,8 @@ document.getElementById("popup-3").classList.toggle("active");
 <script>
     var porfilepicback = sessionStorage.getItem("backprofilepic");
   if (porfilepicback!==null){
-    document.getElementById("profileimage").src = photourls[i];
-    document.getElementById("profileimage1").src = photourls[i];
+    document.getElementById("profileimage").src = porfilepicback;
+    document.getElementById("profileimage1").src = porfilepicback;
   }
     function notavailable(){
     alert("Not Available")
