--- a/f&r/index.html
+++ b/f&r/index.html
@@ -120,7 +120,7 @@ document.getElementById("popup-3").classList.toggle("active");
           <div>
             <li class="active"><a href="index.html">Active Requests</a></li>
             <li><a href="past.html">Past Requests</a></li>
-            <li><a  target="_blank" href="user.html">Request Form</a></li>
+            <li><a  target="_blank" href="https://niftemt-placementcell-forms.pages.dev/B2K21%20Brochure%20Details%20Update/user">Request Form</a></li>
           </div>
         </ul>
       </li>
