--- a/f&r/past-placement-forms.html
+++ b/f&r/past-placement-forms.html
@@ -135,7 +135,7 @@ console.log(document.getElementById("actbt").onclick)
           <div>
             <li><a href="index.html">Active Requests</a></li>
             <li><a href="past.html">Past Requests</a></li>
-            <li><a  target="_blank" href="user.html">Request Form</a></li>
+            <li><a  target="_blank" href="https://niftemt-placementcell-forms.pages.dev/B2K21%20Brochure%20Details%20Update/user">Request Form</a></li>
           </div>
         </ul>
       </li>
