--- a/change-pass.html
+++ b/change-pass.html
@@ -158,6 +158,7 @@ getdehash();
 }
 else if (userdetails[0]=="Not Found"){
   alert("User not found")
+  document.getElementById("load").style.display="none";
 }
       })
 
