--- a/forgot-pass.html
+++ b/forgot-pass.html
@@ -144,6 +144,7 @@ if (userdetails[0]!=="Not Found"){
 }
 else if (userdetails[0]=="Not Found"){
   alert("User not found")
+  document.getElementById("load").style.display="none";
 }
       })
 
