--- a/index.html
+++ b/index.html
@@ -287,6 +287,7 @@ getdehash();
 }
 else if (userdetails[0]=="Not Found"){
   alert("User not found")
+  document.getElementById("load").style.display="none";
 }
       })
 
