--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
     </div>
     <div style="display: flex; gap: 20px;align-items: center;justify-content: center;">
-      <button style="width: 50%;" name="btl" type="submit" onclick="login()" type="button" ><div class="btn-text">Login</div></button>
+      <button style="width: 50%;" name="btl" type="submit" onclick="login()" type="button" id="log-btn"><div class="btn-text">Login</div></button>
       <a style="margin-top: 20px; text-decoration: none;color: #182d8b;" href="forgot-pass.html">Forgot Password</a>
     </div>
       <span class="horline"><span>Or Login using</span></span>
@@ -95,6 +95,15 @@
       ></div>
   </div> 
   <script src="https://unpkg.com/@simplewebauthn/browser/dist/bundle/index.umd.min.js"></script>
+  <script>
+    var input = document.getElementById("Password");
+    input.addEventListener("keypress", function(event) {
+      if (event.key === "Enter") {
+        event.preventDefault();
+        document.getElementById("log-btn").click();
+      }
+    });
+    </script>
 <script>
        
 const  GetUniqueID = () =>{
