--- a/face.html
+++ b/face.html
@@ -40,6 +40,11 @@
       <option value='Srinithi C P'>Srinithi C P</option>
       <option value='Subbu Krishna Sharma GM'>Subbu Krishna Sharma GM</option>
       <option value='Yuvashreekantham R'>Yuvashreekantham R</option>
+      <option value='R B Ramyaa'>R B Ramyaa</option>
+      <option value='Sathishwaran S'>Sathishwaran S</option>
+      <option value='Anjali S'>Anjali S</option>
+      <option value='Mathangi G'>Mathangi G</option>
+      <option value='Srivigneswar S'>Srivigneswar S</option>
       </select>
       
       </div>
