--- a/f&r/past-forms.html
+++ b/f&r/past-forms.html
@@ -824,7 +824,7 @@ if (userdsta !=="done"){
        var responselink = r[k][3]
        var folderid = r[k][7]
        var livetime;
-       var fdta =r[k][0]+"/ll/"+r[k][8];
+       var fdta =r[k][7]+"/ll/"+r[k][8];
        if (r[k][8]==""&&formstatus=="Live"){
        var acpeo = "All M.Tech, All B.Tech";
        }
@@ -851,7 +851,7 @@ if (userdsta !=="done"){
        var fornamefinal =  head.split(" ");
        fornamefinal = fornamefinal.join("%20");
        
-formlink= "https://niftemt-placementcell-forms.pages.dev/form/?form="+folderid
+formlink= "https://spcniftemt.pages.dev/form/?form="+folderid
        var editlink= "https://pcniftemt.pages.dev/f&r/edit-form?form="+folderid
        var prelink ="https://pcniftemt.pages.dev/preview-form/?form="+folderid;
        if(formstatus=="Live"){
