--- a/f&r/past-placement-forms.html
+++ b/f&r/past-placement-forms.html
@@ -814,7 +814,8 @@ if (userdsta !=="done"){
        var head = r[k][0]
        var formstatus = r[k][1]
        var formlink = r[k][2]
-       var responselink = r[k][3]
+       var responselink = r[k][3];
+       var folderid=r[k][7]
        var livetime;
        var fdta =r[k][0]+"/ll/"+r[k][8];
        if (r[k][8]==""&&formstatus=="Live"){
