--- a/f&r/past-placement-forms.html
+++ b/f&r/past-placement-forms.html
@@ -841,7 +841,7 @@ if (userdsta !=="done"){
        if(userrole=="Admin"){
         formowner = '<td>'+r[k][6]+'</td>';
        }
-       formlink= "https://spcniftemt.pages.dev/placement-form/?form="+head
+       formlink= "https://spcniftemt.pages.dev/placement-form/?form="+folderid
 
   
        var prelink ="https://pcniftemt.pages.dev/preview-placement-form/?form="+head;
