--- a/f&r/dash.html
+++ b/f&r/dash.html
@@ -275,6 +275,16 @@ document.getElementById("popup-3").classList.toggle("active");
 
     <main>
       <div class="container" onclick="closeAllSubMenus()">
+        <div id="load" class="load" > 
+          <div class="loader" id="loader"> 
+        
+            </div> 
+            <div
+              id="message"
+            class="message"
+            style="width: 350px;"
+              ></div>
+          </div> 
         <div class="popup1" id="popup-3">
    
           <div class="overlay"></div>
