--- a/f&r/past-forms.html
+++ b/f&r/past-forms.html
@@ -436,7 +436,7 @@ value="Set Time and Date"
     <input type="text" placeholder="Select the peoples" style="width: 100%;" value="All M.Tech, All B.Tech">
    <button style="margin-left: -20px;height: 20px;padding: 20px;text-align: center;" onclick="sel()"> V </button>
   </div>
-   <div class="dropdown-content" style="margin-top: 60px;width: 100%;overflow:scroll; height:200px;" id ="uservaluess" ">
+   <div class="dropdown-content" style="margin-top: 60px;width: 100%;overflow:scroll; height:200px;" id ="uservaluess" >
     <label onclick="getSelectedValues(this)"><input type="checkbox" checked value="All M.Tech">All M.Tech</label>
     <label onclick="getSelectedValues(this)"><input type="checkbox" checked value="All B.Tech">All B.Tech</label>
    </div>
