--- a/f&r/edit-notification.html
+++ b/f&r/edit-notification.html
@@ -360,7 +360,7 @@ document.getElementById("popup-11").classList.toggle("active");
               <h1 style="margin-top: 50px;line-height: 40px;">Enter the notification</h1>
               <textarea style="margin-top: 10px; margin-bottom: 30px;width: 100%;" name="" id="noti-text"></textarea><br>
               <div class="dropdown" style="display: flex;flex-direction: column;width: 100%; margin-top: -20px; margin-bottom: 50px;justify-content: left;align-items: start;">
-                <span class="q">Change form access</span>
+                <span class="q">Change access</span>
                 <div style="display: flex;width: 100%;">
                 <input type="text" placeholder="Select the peoples" style="width: 100%;" value="All M.Tech, All B.Tech">
                <button style="margin-left: -20px;height: 20px;padding: 20px;text-align: center;" onclick="sel()"> V </button>
