--- a/f&r/edit-notification.html
+++ b/f&r/edit-notification.html
@@ -108,7 +108,7 @@ const url = "https://script.google.com/macros/s/AKfycbyU5E_Gi7cANs0P32uD3h3RsTAd
 var namef= document.getElementById("noti-text").value;
 val = namef+"/"+loggedname+"//"+userac;
 document.getElementById("noti-text").value= "";
-document.getElementById("us-acc").value= "";
+document.getElementById("us-acc").value= "All M.Tech, All B.Tech";
 fetch(`${url}?header=${val}`)
    .then((response) => response.json())
    .then(({ data }) => {
