--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       var oldname = localStorage.getItem("loggedname");
       console.log(oldname)
       if(oldname !== null){
-        window.location="f&r/index.html"
+        window.location="f&r/dash.html"
       }
     </script>
 </head>    
@@ -171,7 +171,7 @@ setTimeout(function () {
   var enusername = document.getElementById("Username").value;
   
 
-  window.location="f&r/index.html"
+  window.location="f&r/dash.html"
  },2000);
 }
 else{
@@ -223,7 +223,7 @@ setTimeout(function () {
   var enusername = document.getElementById("Username").value;
   
 
-  window.location="f&r/index.html"
+  window.location="f&r/dash.html"
  },2000);
 }
 function getuserdetails(user,pass){
