--- a/face.html
+++ b/face.html
@@ -136,7 +136,7 @@ if (passdevuniid !== "Not"){
            const verifyuserResult = await veruser.json()
            console.log(verifyuserResult)
 if (verifyuserResult.success){
-  localStorage.setItem("loggedname", username);
+  localStorage.setItem("loggedname", userId);
   var  uname = localStorage.getItem("loggedname");
   console.log(uname)
 document.getElementById("loader").style.display="none"; 
@@ -146,7 +146,7 @@ setTimeout(function () {
   var enusername = document.getElementById("Username").value;
   
 
-  window.location="f&r/dash.html"
+  window.location="f&r/dash.html "
  },2000);
 }
 else{
