--- a/set-pass.html
+++ b/set-pass.html
@@ -106,7 +106,7 @@ setTimeout(function () {
   localStorage.setItem("loggedname", setname);
   }
   sessionStorage.removeItem("setname");
-  window.location="f&r/index.html"
+  window.location="f&r/dash.html"
  },2000);
 }
 function getuserdetails(user,pass,salt){
