--- a/f&r/exceed.html
+++ b/f&r/exceed.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="white_logo.png" type="image/x-icon">
     <title>Limit Exceeded</title>  
     <link rel="stylesheet" href="style.css" />
-
+    <script src="script-notification.js"></script>
 
 </head>    
 <body>
