--- a/f&r/change-pass-1.html
+++ b/f&r/change-pass-1.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="style 1.css" />
   <link rel="stylesheet" type="text/css" href="style 2.css">
   <link rel="stylesheet" type="text/css" href="style 4.css">
+  <script src="script-notification.js"></script>
  <style>
     table .approve{
        border-radius: 20px;
