--- a/f&r/dash.html
+++ b/f&r/dash.html
@@ -7,10 +7,18 @@
   <link rel="icon" href="white_logo.png" type="image/x-icon">
   <link rel="stylesheet" href="style 3.css">
   <script type="text/javascript" src="app.js" defer></script>
-
+  <script src="script-notification.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="style 1.css" />
   <link rel="stylesheet" type="text/css" href="style 2.css">
+  <link rel="manifest" href="manifest.json">
+  <script>
+  var uuuusername = localStorage.getItem("loggedname");
+  const channel4Broadcast = new BroadcastChannel('channel4');
+  channel4Broadcast.postMessage({key: uuuusername});
+    // Register the Service Worker
+ 
+ </script>
   <script>
     function getnotifications(){
 const url = "https://script.google.com/macros/s/AKfycbz4Hi2UfKaR2uHULiYN0kA8aOj1bOHsW0tSHq7du1mQDsxfUNuN7fEyXf5msy2hU2-P/exec" 
@@ -203,12 +211,12 @@ document.getElementById("popup-3").classList.toggle("active");
           <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="m313-480 155 156q11 11 11.5 27.5T468-268q-11 11-28 11t-28-11L228-452q-6-6-8.5-13t-2.5-15q0-8 2.5-15t8.5-13l184-184q11-11 27.5-11.5T468-692q11 11 11 28t-11 28L313-480Zm264 0 155 156q11 11 11.5 27.5T732-268q-11 11-28 11t-28-11L492-452q-6-6-8.5-13t-2.5-15q0-8 2.5-15t8.5-13l184-184q11-11 27.5-11.5T732-692q11 11 11 28t-11 28L577-480Z"/></svg>
         </button>
         <img class="out-items" style="width: 50px;" src="white_logo.png" alt="">
-        <img id="profileimage1" style=" scale:90%;border-radius: 50px; width: 50px; height: 50px; " src=".//1.png" alt="" srcset="">
+        <img id="profileimage1" style=" scale:90%;border-radius: 50px; width: 50px; height: 50px; " src="" alt="" srcset="">
        
       </li>
       <li class="indetails"  id="insprofile" style="left: 0px;">
         <div class="log-items" style="flex-direction: column; gap: 0px; align-items: center;justify-content: center;">
-         <a onclick="userPopup()"><img id="profileimage" style=" scale:200%;border-radius: 50px; width: 50px; height: 50px; " src=".//1.png" alt="" srcset=""></a>
+         <a onclick="userPopup()"><img id="profileimage" style=" scale:200%;border-radius: 50px; width: 50px; height: 50px; " src="" alt="" srcset=""></a>
        <div style="background-color: white; color: black; padding: 10px;border-radius: 40px;">
         <p ><span id="mname">Nitheesh R L</span></p>
        </div>
