--- a/f&r/dashboard.html
+++ b/f&r/dashboard.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="white_logo.png" type="image/x-icon">
     <title>Brochure Details Update Dashboard</title>  
     <link rel="stylesheet" href="style.css" />
+    <script src="script-notification.js"></script>
 </head>    
 <body>
 <section class="header1">
