--- a/f&r/edit-form.html
+++ b/f&r/edit-form.html
@@ -6,6 +6,7 @@
   <title>Update Form</title>
   <link rel="stylesheet" href="style 3.css">
   <script type="text/javascript" src="app.js" defer></script>
+  <script src="script-notification.js"></script>
   <link rel="icon" href="white_logo.png" type="image/x-icon">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="style 1.css" />
