--- a/f&r/past-placement-forms.html
+++ b/f&r/past-placement-forms.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="style 1.css" />
   <link rel="stylesheet" type="text/css" href="style 2.css">
+  <script src="script-notification.js"></script>
  <style>
     table .approve{
        border-radius: 20px;
