--- a/f&r/dash.html
+++ b/f&r/dash.html
@@ -652,6 +652,8 @@ const beforeUnloadHandler = (event) => {
   updatelogstatus("Offline");  
 };
 window.addEventListener("beforeunload", beforeUnloadHandler);
+
+sendnotification("Nitheesh R L","Dashboard opened by "+uuuusername)
    </script>
 
 </html>
