--- a/f&r/new-form.html
+++ b/f&r/new-form.html
@@ -6,6 +6,7 @@
   <title>New Form</title>
   <link rel="stylesheet" href="style 3.css">
   <script type="text/javascript" src="app.js" defer></script>
+  <link rel="manifest" href="manifest.json">
   <script src="script-notification.js"></script>
   <link rel="icon" href="white_logo.png" type="image/x-icon">
   <link rel="stylesheet" type="text/css" href="style.css">
